correcciones para correr en local

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="login__logo text-center ">
                     <img src="./assets/logo-movil.png" alt="img-logo" class="img-fluid " style="height: 100px;width:100px;">
                 </div>
-                <form action="/pages/menu.html">
+                <form action="pages/menu.html">
                     <div class="form-group row mt-3 justify-content-center">
                         <p class="form-text col-12 text-right"><a href="./pages/menu.html"><i class="fa fa-question-circle" aria-hidden="true"></i>Realizar Solictud</a></p>
                         <label for="empleado" class="form-label col-4">Empleado</label>
